
build loop
======================

BuildOutputLoggerManager
----------------------
* Use different loggers for different files.

CMSynergy
----------------------
* Fix error publishing CMSynergy build (CC-876). Reported by Gerard Roos. Tested by David Corley.
* Allow specification of build and state attributes for baselines created with Synergy 6.4+ (CC-860). Patch by David Corley

Origo Publisher
----------------------
* Update to use new issue handling API. Patch by Patrick Ruckstuhl.

Removed deprecated classes
----------------------
* removed CruiseControl (old launch wrapper)
* removed net.sourceforge.cruisecontrol.SelfConfiguringPlugin 
* removed net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusBootstrapper
* removed net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusFTPBootstrapper
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusPublisher
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusFTPPublisher

Removed deprecated methods
----------------------
* Main, P4Bootstrapper, Log, ModificationSet 

TwitterPublisher
----------------------
* Add a new plugin for publishing build results to Twitter.

UCM
----------------------
* UCM.java not creating the right command line for describing all activities (CC-886). Reported by Adrien Gracia


documentation
======================

configxml.html
----------------------
* PropertyFileLabelIncrementer: document preBuildIncrementer attribute (CC-900). Patch by David Corley

CruiseControl Release Notes - 2.8.2

BuildLoopStatusReportTask
----------------------
* Fix bug where a project with no ModificationSet would cause the error message 'Failed to reach dashboard instance : http://localhost:8080/dashboard/buildloop/listener, either the dashboard has not started up or there is a network problem' (CC-766).

cruisecontrol.sh (Binary Release)
----------------------
* Allow JETTY_LOGS to be set by environment varable (CC-872). Patch by Angie Lin
